--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "node-fetch": "^2.7.0",
     "sqlite3": "^5.1.7"
