--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "node-fetch": "^2.7.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
