--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node server/server.js",
     "start-nodemon": "nodemon server/server.js",
     "dev": "nodemon app.js"
   },
